--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "*** ### Unit 3 Group Project. Full CRUD Application. *** ### About dotBEAT Music has the ability to bring people together. It has the power to transcend language barriers, to cross social and cultural boundaries, and to connect people in a way that nothing else can. No matter what your taste in music, there is always a song that can bring people together. Whether it’s a shared love of a particular artist or genre, or simply a catchy tune that gets everyone moving. So next time you’re looking for a way to bond with someone, try sharing a song. You might just find that music is the perfect way to connect with someone on a deeper level.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
